Fixed password toggler spacing. Fixed white background on mapbox screen. Fixed spacing on create profile page cancel button. Changed input styling.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -180,6 +180,7 @@ h3 {
 
 .mapboxgl-ctrl-bottom-right {
   display: none;
+  z-index: -1 !important;
 }
 
 /* @media only screen and (max-width: 768px) {
